# three_way_algorithms

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cppcheck.yml
test/: CMakeLists.txt
